Fixed CSS z-index stuff

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 }
 
 .Popover {
-    z-index: 2;
+    z-index: 5;
 }
 
 
