--- a/src/components/settings/settings.module.scss
+++ b/src/components/settings/settings.module.scss
@@ -6,6 +6,7 @@
     @extend .flexAlignCenter;
     @extend .flexCenter;
 
+    z-index: 6;
     padding: 10px;
     background-color: $color-dark-1;
     cursor: pointer;
